fix public api endpoint
